# moment

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
cmake/: PolycppMomentLocales.cmake
docs/: Doxyfile  api-mapping.md  dependency-analysis.md  divergences.md  port-checklist.md  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/_ext/: cpp_toc_overloads.py
docs/sphinx/api/: construction.rst  display.rst  duration.rst  index.rst  locale.rst  manipulation.rst  moment-class.rst  units.rst
docs/sphinx/examples/: countdown.rst  index.rst  log-time-report.rst  standup-summary.rst
docs/sphinx/getting-started/: core-model.rst  installation.rst  quickstart.rst
docs/sphinx/guides/: choose-input-factory.rst  compatibility.rst  index.rst  iso-roundtrip.rst  parse-strict.rst  start-of-week.rst  switch-locale.rst  validate-input.rst
docs/sphinx/tutorials/: business-days.rst  durations-and-diff.rst  index.rst  locale-formatting.rst
examples/: countdown.cpp  log_time_report.cpp  standup_summary.cpp
include/polycpp/moment/: duration.hpp  format.hpp  locale.hpp  moment.hpp  parse.hpp  units.hpp
include/polycpp/moment/detail/: aggregator.hpp  duration.hpp  format.hpp  json.hpp  locale.hpp  locale_en.hpp  moment.hpp  parse.hpp  units.hpp
src/: generated_locales.cpp  moment.cpp
tests/: test_display.cpp  test_duration.cpp  test_format.cpp  test_generated_locales.cpp  test_json_integration.cpp  test_locale.cpp  test_moment.cpp  test_moment_basic.cpp  test_parse.cpp  test_query.cpp  test_units.cpp
tools/: generate-locales.mjs
